# Next-Random-Number-Identifier

./: .codecov.yml  .coverage  .flake8  .gitignore  CONTRIBUTING.md  DATALOADER.md  LICENSE  Makefile  PROJECT_CLOSURE_SUMMARY.md  Predictive Analysis Framework-Technical Specification.md  README.md  Random Number Forecast 2.0 - Upgraded Specification.md  Technical-Specification.md  blame_b101_asserts.py  extract_bandit_b101.py  git_quick_commands.md  git_workflow_helper.sh  git_workflow_summary.md  import_analysis_report.md  import_standardization_final_report.md  import_validation_report.md  inspect_data_loader.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_structure.py  standardize_imports.py  test_basic_functionality.py  test_components.py  test_data_loader.py  test_integration.py  tsconfig.json  validate_imports.py  verify_installation.py
.github/: dependabot.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .codecov.yml  ci.yaml  ci.yml  deploy.yml  doc-maintenance.yml  docs.yml  enhanced-ci.yaml  release.yml
benchmark_results/: profile_feature_engineering_medium_1553_rows.prof  profile_feature_engineering_small_500_rows.prof
data/: historical_random_numbers.csv
docs/: # Code Citations.md  Next Random Number Identifier-architecture-documentation.md  conf.py
docs/diagrams/: NRNI Component Interaction-diagrams.mermaid  NRNI Data-flow-diagram.mermaid  NRNI Prediction sequence-diagram.mermaid
docs/project-management/: NRNI_Comprehensive_Project_Plan_March 2025.md  NRNI_Copilot_Review_Guide.md  NRNI_Copilot_Review_Report.md  NRNI_Copilot_Strategic_Guidance.md  README.md
docs/project-management/plans/: NRNI_Directional_Enhancement.md  NRNI_Enhanced_Framework.md  project_plan.md
docs/project-management/schedules/: project_schedule.md
docs/project-management/status_updates/: weekly_status_report_template.md
docs/source/: architecture.rst  authors.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  introduction.rst  modules.rst  usage.rst
docs/source/_static/: custom.css
maintenance/: maintain_diagrams.py  migrate_to_enhanced_dataloader.py  run_dataloader_tests.py
scripts/: config_migration.py  profile_feature_engineering.py  test_analysis.py  test_migration.py  validate_and_profile_data.py  verify_cleanup.py
src/: NumberHandler.ts  __init__.py  app.ts  cli.py  main.py  random_number_forecast.py  random_number_forecast.py.bak
src/data/: loader.py
src/features/: __init__.py  feature_engineering.py  feature_selection.py
src/models/: __init__.py  adaptive_ensemble.py  base_model.py  bayesian_model_averaging.py  ensemble.py  hybrid_forecaster.py  markov_chain.py  markov_chain_fixed.py  model_stacking.py  optimized_ensemble.py  random_forest.py  xgboost_model.py
src/tests/: test_features.py
src/tools/: validate_dataset.py
src/utils/: __init__.py  data_loader.py  date_predictor.py  enhanced_data_loader.py  evaluation.py  file_utils.py  monitoring.py  monitoring_pipeline.py  simple_data_loader.py  statistical_analysis.py
src/visualization/: __init__.py  plots.py
tests/: conftest.py  test_data_loader_consolidated.py  test_data_loader_integration.py  test_integration.py  test_model_integration.py  test_models.py  test_models_consolidated.py
tests/features/: test_feature_engineer.py  test_features.py
tests/integration/: test_data_loader.py  test_model_pipeline.py  test_pipeline.py
tests/models/: test_combination_strategies.py  test_ensemble.py  test_markov_chain.py  test_random_forest.py  test_xgboost_model.py
tests/unit/: test_components.py  test_main.py  test_models.py
tests/utils/: test_data_loader_consolidated.py  test_enhanced_data_loader.py  test_loaders.py
