[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]
include = "\\.pyi?$"
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pyright]
include = [
    "src"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/tests"
]
ignore = [
    "src/tests/test_*.py"
]
# defineConstant = {
#     DEBUG = true
# }
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
strictListInference = true
strictDictionaryInference = true
strictParameterNullChecking = true
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"

[project]
name = "next_random_number_identifier"
version = "0.1.0"
description = "A tool to identify patterns in random number sequences"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Project Contributors"}
]
dependencies = [
    "numpy>=1.21.6,<2.0",  # Updated to allow newer versions for compatibility
    "pandas~=2.2.0",      # Updated from ==1.3.5
    "scikit-learn~=1.4.0", # Updated from ==1.0.2
    "matplotlib>=3.5.0", # Updated from ==3.4.3
    "seaborn==0.11.2",
    "statsmodels~=0.14.1", # Updated from ==0.13.2
    "typing_extensions>=4.0.0", # Added for pydantic
    "pydantic>=1.9.0,<2.0.0", # Added for robust data validation
]

[project.optional-dependencies]
xgboost = ["xgboost==1.5.2"]
torch = ["torch==1.9.1"]
dev = [
    "pytest==7.1.2",
    "pytest-cov==2.12.1",
    "hypothesis==6.135.14",
    "black==22.3.0",
    "isort==5.10.1",
    "flake8==4.0.1",
    "mypy==0.910",
    "bandit[toml]==1.7.9",  # Added [toml] extra for bandit
    "pip-audit==2.7.3"
]
test = ["pytest-cov==2.12.1"]
doc = ["sphinx==4.5.0", "sphinx_rtd_theme==1.0.0"]
full = [
    "xgboost==1.5.2",
    "torch==1.9.1",
    "pytest==7.1.2",
    "pytest-cov==2.12.1",
    "hypothesis==6.135.14",
    "black==22.3.0",
    "isort==5.10.1",
    "flake8==4.0.1",
    "mypy==0.910",
    "sphinx==4.5.0",
    "sphinx_rtd_theme==1.0.0",
    "bandit[toml]==1.7.9", # Added [toml] extra for bandit
    "pip-audit==2.7.3"
]

[tool.pytest]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "docs/conf.py", "old", "build", "dist"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# [tool.mypy.plugins.numpy.*]
# follow_imports = "skip"

# [tool.mypy.plugins.pandas.*]
# follow_imports = "skip"

# [tool.mypy.plugins.matplotlib.*]
# follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]