# ...existing content from setup-cfg.yml...
[metadata]
name = next_random_number_identifier
version = attr: src.__version__
description = A machine learning-based system for analyzing and forecasting random number sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/[YOUR-USERNAME]/next-random-number-identifier
author = AIQube Centaur Systems Team
author_email = your-email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = random numbers, prediction, machine learning, statistical analysis

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    numpy>=1.20.0
    scikit-learn>=1.0.0
    xgboost>=1.5.0
    matplotlib>=3.4.0

[options.packages.find]
where = .
exclude =
    tests
    docs

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    flake8>=4.0.0
    black>=22.1.0
    isort>=5.10.0
    mypy>=0.910
    sphinx>=4.4.0
    sphinx_rtd_theme>=1.0.0
    tox>=3.24.0
    twine>=3.8.0

doc =
    sphinx>=4.4.0
    sphinx_rtd_theme>=1.0.0

test =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-benchmark>=3.4.0

[options.entry_points]
console_scripts =
    rnni = src.cli:run_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/conf.py,build,dist
ignore = E203, W503

[isort]
profile = black
multi_line_output = 3

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[mypy.plugins.numpy.*]
follow_imports = skip

[mypy.plugins.pandas.*]
follow_imports = skip

[mypy.plugins.matplotlib.*]
follow_imports = skip

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*