[metadata]
name = next_random_number_identifier
version = 2.0.0
description = A machine learning-based system for analyzing and forecasting random number sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OoSos/next-random-number-identifier
author = OoSos
author_email = author@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent
keywords = random numbers, prediction, machine learning, statistical analysis

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scikit-learn
    xgboost
    matplotlib

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    tox
    twine

doc =
    sphinx
    sphinx_rtd_theme

test =
    pytest
    pytest-cov
    pytest-benchmark

[options.entry_points]
console_scripts =
    rnni = src.cli:run_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/conf.py,old,build,dist
ignore = E203, W503

[isort]
profile = black
multi_line_output = 3

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[mypy.plugins.numpy.*]
follow_imports = skip

[mypy.plugins.pandas.*]
follow_imports = skip

[mypy.plugins.matplotlib.*]
follow_imports = skip

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*